# noveltrad

./: .eslintrc.cjs  .gitignore  .prettierrc.yaml  404.html  AGENTS.md  ARCHITECTURE.md  AUDIT_SDD_NovelTrad.html  CHANGELOG.md  CLAIMS_TO_VERIFY.html  DEVELOPMENT.md  GEMINI.md  LICENSE  NovelTrad.iss  NovelTrad.spec  PHASE0_VALIDATION_REPORT.html  PRIORITY_EDITS.html  PROGRESS.md  README.fr.md  README.md  REFACTOR_PLAN_V3.md  REUSE_MAP.html  SPEC.md  STABILIZATION_AUDIT.html  V1_PLAN.md  WORKFLOW_STATE.md  a améliorer.txt  batch_all_chapters.py  batch_chapters.sh  build.py  build.spec  build_script.py  cahier_des_charges_noveltrad_v2.docx  cleanup_mainwindow_phase2.py  cli.html  code.html  config.json  debug_cost.py  developer-guide.html  download_icons.py  fix_test.py  (+29 more)
.Jules/: palette.md
.gemini/: GEMINI.md
.jules/: bolt.md  palette.md  sentinel.md
assets/: AUDIT_SDD_NovelTrad.md.-tzcCnUP.js  AUDIT_SDD_NovelTrad.md.-tzcCnUP.lean.js  AUDIT_SDD_NovelTrad.md.B2c3YAFt.js  AUDIT_SDD_NovelTrad.md.B2c3YAFt.lean.js  AUDIT_SDD_NovelTrad.md.Bff99p8c.js  AUDIT_SDD_NovelTrad.md.Bff99p8c.lean.js  AUDIT_SDD_NovelTrad.md.BhyxNO7C.js  AUDIT_SDD_NovelTrad.md.BhyxNO7C.lean.js  AUDIT_SDD_NovelTrad.md.BkGGsClr.js  AUDIT_SDD_NovelTrad.md.BkGGsClr.lean.js  AUDIT_SDD_NovelTrad.md.Bn5lY7As.js  AUDIT_SDD_NovelTrad.md.Bn5lY7As.lean.js  AUDIT_SDD_NovelTrad.md.BoIh0FQY.js  AUDIT_SDD_NovelTrad.md.BoIh0FQY.lean.js  AUDIT_SDD_NovelTrad.md.BsNGf2uG.js  AUDIT_SDD_NovelTrad.md.BsNGf2uG.lean.js  AUDIT_SDD_NovelTrad.md.BwRO0KkZ.js  AUDIT_SDD_NovelTrad.md.BwRO0KkZ.lean.js  AUDIT_SDD_NovelTrad.md.C-6yzz6H.js  AUDIT_SDD_NovelTrad.md.C-6yzz6H.lean.js  AUDIT_SDD_NovelTrad.md.C-9wveeO.js  AUDIT_SDD_NovelTrad.md.C-9wveeO.lean.js  AUDIT_SDD_NovelTrad.md.C-X0YZdj.js  AUDIT_SDD_NovelTrad.md.C-X0YZdj.lean.js  AUDIT_SDD_NovelTrad.md.C1xGwr7x.js  AUDIT_SDD_NovelTrad.md.C1xGwr7x.lean.js  AUDIT_SDD_NovelTrad.md.COqoLFoX.js  AUDIT_SDD_NovelTrad.md.COqoLFoX.lean.js  AUDIT_SDD_NovelTrad.md.CW_YSbDY.js  AUDIT_SDD_NovelTrad.md.CW_YSbDY.lean.js  AUDIT_SDD_NovelTrad.md.Ce_dRuKl.js  AUDIT_SDD_NovelTrad.md.Ce_dRuKl.lean.js  AUDIT_SDD_NovelTrad.md.ChODX5UU.js  AUDIT_SDD_NovelTrad.md.ChODX5UU.lean.js  AUDIT_SDD_NovelTrad.md.Cw3Eap6p.js  AUDIT_SDD_NovelTrad.md.Cw3Eap6p.lean.js  AUDIT_SDD_NovelTrad.md.D8lL1OMg.js  AUDIT_SDD_NovelTrad.md.D8lL1OMg.lean.js  AUDIT_SDD_NovelTrad.md.DOabpLbJ.js  AUDIT_SDD_NovelTrad.md.DOabpLbJ.lean.js  (+2727 more)
audit/: GAP_ANALYSIS_2.1.3_to_SDD.html  SDD_DEPTH_AUDIT_2026-07-07.html
data/: dictionary.db
docs/: AUDIT_SDD_NovelTrad.md  CDC.txt  CDC_ACTION_PLAN.md  CDC_GAP_ANALYSIS.md  CLAIMS_TO_VERIFY.md  HEADLESS.md  PHASE0_VALIDATION_REPORT.md  PRIORITY_EDITS.md  RELEASING.md  cli.md  (+11 more)
(+771 files in other folders)
