[project]
name = "noveltrad"
version = "4.2.4"
description = "Pipeline de traduction multi-agent pour romans et web novels"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "NovelTrad Team"},
]
dependencies = [
    "PyQt6",
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.0.0",
    "EbookLib",
    "beautifulsoup4",
    "python-docx",
    "ctranslate2",
    "sentencepiece",
    "openai",
    "httpx",
    "language-tool-python",
    "lancedb",
    "pyinstaller",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
