[project]
name = "noveltrad"
version = "1.1.0"
description = "AgentTranslate — Multi-Agent Desktop Translation (PySide6 + LangGraph)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Balrog57" }]
requires-python = ">=3.13,<3.14"
dependencies = [
    "pyside6>=6.9",
    "langgraph>=0.2",
    "langchain-ollama>=0.2",
    "langchain-openai>=0.2",
    "langchain-core>=0.3",
    "pydantic>=2",
    "pynput>=1.7",
    "pyperclip>=1.9",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "packaging>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.10",
    "pyinstaller>=6.0",
    "pillow>=10.0",
]
ocr = [
    "pytesseract>=0.3.10",
    "pillow>=10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

# The 4 system prompts in agents.py are reproduced VERBATIM from the CDC; their
# long lines must not be wrapped. history.py has a long SQL VALUES list.
[tool.ruff.lint.per-file-ignores]
"src/core/agents.py" = ["E501"]
"src/utils/history.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
